# GeneLink

./: .gitignore  .replit  pyproject.toml  render.yaml  requirements.txt
GeneLink/: pnpm-lock.yaml
GeneLink/artifacts/api-server/src/: app.ts
GeneLink/genelink-audit/: .replit  MIGRATION_GUIDE.md  Procfile  render.yaml  replit.md  requirements.txt
GeneLink/genelink-audit/.agents/: agent_assets_metadata.toml
GeneLink/genelink-audit/artifacts/api-server/: .env.example  app.py  requirements.txt
GeneLink/genelink-audit/artifacts/api-server/.replit-artifact/: artifact.toml
GeneLink/genelink-audit/artifacts/api-server/db/: connection.py  init_db.py  (+1 more)
artifacts/api-server/: _headers  app.py  requirements.txt
artifacts/api-server/db/: connection.py  init_db.py
artifacts/api-server/routes/: admin.py  auth.py  channels.py  dm.py  email_utils.py  forum.py  genes.py  inst_auth.py  institutions.py  moderation.py  partnerships.py  preprints.py  security.py
artifacts/api-server/security/: __init__.py  middleware.py
artifacts/api-server/static/css/: main.css
artifacts/api-server/static/js/: api.js  auth.js  chat.js  dashboard.js  dm.js  firebase_auth.js  forum.js  forum_post.js  inst_dashboard.js  parcerias.js  profile.js  search.js  supabase_auth.js  user_search.js
artifacts/api-server/templates/: admin.html  canal.html  chat.html  dashboard.html  dm.html  forum.html  forum_post.html  index.html  login.html  preprint_criar.html  preprints.html  profile.html  recursos.html  search.html  user_public.html  user_search.html
genelink-audit/: requirements.txt
(+44 files in other folders)
