[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt==4.1.3",
    "eventlet==0.36.1",
    "flask==3.0.3",
    "flask-cors==4.0.1",
    "flask-limiter==3.8.0",
    "flask-socketio==5.3.6",
    "psycopg2-binary==2.9.9",
    "pyjwt==2.8.0",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "waitress>=3.0.0",
]
